--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -1,6 +1,6 @@
 //COLORS   Change to my liking
-$color-primary: #f6b736;
-$color-primary-light: #f7b229;
+$color-primary: #179b4e;
+$color-primary-light: #179b4e;
 $color-primary-dark: rgb(220, 108, 17);
 
 
@@ -8,7 +8,7 @@ $color-grey:grey;
 $color-white: #EAF2E3;
 $color-black: #000;
 
-$text-color-primary: #272727;
+$text-color-primary: #f5ebeb;
 
 //GRID
 $grid-width: 114rem;
