--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ html::-webkit-scrollbar {
   to {
     opacity: 1; } }
 
-@keyframes noise-anim {
+/* @keyframes noise-anim {
   0% {
     clip: rect(37px, 9999px, 72px, 0); }
   5% {
@@ -155,7 +155,7 @@ html::-webkit-scrollbar {
     z-index: 0; }
   100% {
     visibility: hidden;
-    z-index: 0; } }
+    z-index: 0; } } */
 
 .u-center-text {
   text-align: center; }
@@ -438,10 +438,11 @@ body {
   height: auto;
   overflow: hidden;
   padding: 0; }
-  .text-box:hover .text-box__section--content {
+  .text-box:hover .text-box__section--content { 
     transition: all .25s linear;
     height: 0rem;
-    overflow: hidden; }
+    overflow: hidden;
+   }
   .text-box__section {
     overflow: hidden;
     border-bottom: 1px solid; }
@@ -451,7 +452,8 @@ body {
       margin: 0; }
     .text-box__section--content {
       transition: all .25s linear;
-      height: 0rem; }
+      height: 0rem; 
+    }
     .text-box__section:hover .text-box__section--content,
     .text-box__section-default .text-box__section--content {
       height: 25rem; }
